5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1637_2447.log
== TEST (2019-04-11 10:46:29) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

if (preco > pagamento):
	print ("Falta x")
	
else:
	print ("Troco de y")
-- OUTPUT:
Falta x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:46:44) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

if (preco > pagamento):
	print ("Falta x")
	
else:
	print ("Troco de y")
-- EXECUTION TIME:
0.166905
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta x
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:49:13) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta" x, 2))
	
else:
	print(round("Troco" y, 2)
-- EXECUTION TIME:
0.21082
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 8
    print(round("Falta" x, 2))
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:16) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta" x, 2))
	
else:
	print(round("Troco" y, 2)
-- ERROR:
File "XXXX", line 8
    print(round("Falta" x, 2))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:37) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco" y, 2)
-- ERROR:
File "XXXX", line 11
    print(round("Troco" y, 2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:44) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco y", 2)
-- ERROR:
File "XXXX", line 12
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:52) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco y", 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("Falta x", 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:31) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco de Y", 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("Falta x", 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:57:33) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco de Y", 2))
-- EXECUTION TIME:
0.149155
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2447/main.py", line 8, in <module>
    print(round("Falta x", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:58) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
Y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco de Y", 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round("Falta x", 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:00:49) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco de y", 2))
-- EXECUTION TIME:
0.159873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2447/main.py", line 8, in <module>
    print(round("Falta x", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:01:59) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x"x, 2))
	
else:
	print(round("Troco de Y"y, 2))
-- EXECUTION TIME:
0.154662
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 8
    print(round("Falta x"x, 2))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:04) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x"x, 2))
	
else:
	print(round("Troco de Y"y, 2))
-- ERROR:
File "XXXX", line 8
    print(round("Falta x"x, 2))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:06) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x"x, 2))
	
else:
	print(round("Troco de Y"y, 2))
-- ERROR:
File "XXXX", line 8
    print(round("Falta x"x, 2))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:02:18) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco de Y"y, 2))
-- EXECUTION TIME:
0.241879
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 11
    print(round("Troco de Y"y, 2))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:02:22) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco de Y"y, 2))
-- ERROR:
File "XXXX", line 11
    print(round("Troco de Y"y, 2))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:02:58) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco de Y"y, 2))
-- EXECUTION TIME:
0.144438
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 11
    print(round("Troco de Y"y, 2))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:03:00) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print(round("Troco de Y"y, 2))
-- ERROR:
File "XXXX", line 11
    print(round("Troco de Y"y, 2))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:05:02) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print(round("Falta x", 2))
	
else:
	print("Troco de Y")
-- EXECUTION TIME:
0.150299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2447/main.py", line 8, in <module>
    print(round("Falta x", 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:07:12) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta "), round(x, 2)
	
else:
	print("Troco de Y"), round(y, 2)
-- EXECUTION TIME:
0.204298
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de Y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:07:16) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta "), round(x, 2)
	
else:
	print("Troco de Y"), round(y, 2)
-- OUTPUT:
Falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:07:53) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta ") round(x, 2)
	
else:
	print("Troco de ") round(y, 2)
-- EXECUTION TIME:
0.141242
-- ERROR:
  File "/home/codebench/codes/1637/2447/main.py", line 8
    print("Falta ") round(x, 2)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:07:55) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta ") round(x, 2)
	
else:
	print("Troco de ") round(y, 2)
-- ERROR:
File "XXXX", line 8
    print("Falta ") round(x, 2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:07:56) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta ") round(x, 2)
	
else:
	print("Troco de ") round(y, 2)
-- ERROR:
File "XXXX", line 8
    print("Falta ") round(x, 2)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:16) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta " round(x, 2))

else:
	print("Troco de " round(y, 2))
-- ERROR:
File "XXXX", line 8
    print("Falta " round(x, 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:18) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta " round(x, 2))

else:
	print("Troco de " round(y, 2))
-- ERROR:
File "XXXX", line 8
    print("Falta " round(x, 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:32) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta ", round(x, 2))

else:
	print("Troco de ", round(y, 2))
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:08:44) 
-- CODE:
preco = float(input("Deterine o preco: "))
pagamento = float(input("Determine a forma de pagamento: "))

x = preco - pagamento
y = pagamento - preco

if (preco > pagamento):
	print("Falta ", round(x, 2))

else:
	print("Troco de ", round(y, 2))
-- EXECUTION TIME:
0.207164
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
